Release history for datenstrahler

v17.02  2017-02-12
  [Added]
  - Datenstrahler will now automatically add a "file://" prefix for
    local files.

v16.06  2016-06-26
  [Added]
  - Parameter "-d" to bypass the window manager, a.k.a "pseudo desktop
    window".
  - Parameter "-C" to ignore any cookies.

v16.03  2016-03-13
  [Added]
  - Parameter "-r" can trigger an automatic reload after $n seconds.

v15.09  2015-09-01
  [Added]
  - Initial release.
  - Show a web page in a window.
  - Manpage.