@@ -1,5 +1,9 @@
 Release history for datenstrahler
 
+next
+  [Fixed]
+  - "-r" works better on network failures.
+
 v17.02  2017-02-12
   [Added]
   - Datenstrahler will now automatically add a "file://" prefix for
